# epubreader

./: .env.example  .gitignore  .lighthouserc.deploy.json  Makefile  README.md  alembic.ini  pyproject.toml
.github/workflows/: lighthouse-deployment.yml
apps/api/: errors.py  lifespan.py  main.py
apps/api/middleware/: api_key.py  request_id.py
apps/api/routes/: artifacts.py  jobs.py  (+4 more)
configs/: app.yaml  models.api.yaml  models.local.yaml
docs/: README.md  api-usage.md  local-workflow.md  milestone-1.md  milestone-2.md  milestone-3.md  milestone-4.md  milestone-5.md  milestone-6.md  milestone-7.md  milestone-8.md  milestones.md  system-design-deep-dive.en.md  system-design-deep-dive.zh-TW.md  task-plan.md
frontend/: README.md  package-lock.json  package.json  tsconfig.tsbuildinfo  vitest.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: header-shell.tsx  nav.tsx  runtime-provider.tsx
frontend/lib/: api.ts  mode-guard.ts  runtime.ts
frontend/tests/: api.test.ts  collections-page.test.tsx  runtime.test.ts
migrations/: env.py
migrations/versions/: 0001_initial_schema.py
postman/: book-qa-library.postman_collection.json
prompts/: answer_with_citations.md  chunk_summary.md  classify_genre.md  skill_extract.md  synthetic_qa.md  wiki_transform.md
sample/miz-500/: chunks.jsonl  cleaned.json  eval_generation.json  eval_parse.json  eval_retrieval.json  parsed.json  qa.jsonl  query_examples.json  skill.md  source_manifest.json  summary.md  wiki.md
tests/: conftest.py
tests/e2e/: test_full_pipeline.py  test_pdf_pipeline.py
(+39 files in other folders)
