[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "book-qa-library"
version = "0.1.0"
description = "Local-first private library QA system"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "book-qa-library contributors" }]
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn>=0.31.0,<1.0.0",
  "pydantic>=2.9.0,<3.0.0",
  "sqlalchemy>=2.0.35,<3.0.0",
  "alembic>=1.13.2,<2.0.0",
  "ebooklib>=0.18",
  "beautifulsoup4>=4.12.3",
  "lxml>=5.3.0",
  "chromadb>=0.5.5",
  "llama-index>=0.11.16",
  "httpx>=0.27.2",
  "pyyaml>=6.0.2",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6.7",
  "mypy>=1.11.2",
]
test = [
  "pytest>=8.3.3",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]

[tool.mypy]
python_version = "3.11"
strict = true
pretty = true
warn_unused_configs = true
exclude = ["^tests/"]

[[tool.mypy.overrides]]
module = ["yaml"]
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["apps", "packages"]
